@@ -9,6 +9,8 @@ warnings.filterwarnings("ignore", ".*popen2 module is deprecated.*",
                         DeprecationWarning)
 warnings.filterwarnings("ignore", "the MimeWriter module is deprecated.*",
                         DeprecationWarning)
+warnings.filterwarnings("ignore", "the mimify module is deprecated.*",
+                        DeprecationWarning)
 
 class AllTest(unittest.TestCase):
 
